--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<div><img id="mjpeg_dest" onclick="toggle_fullscreen(this);" src="cam_pic.php?time=1688742930005&amp;pDelay=40000" class="fullscreen"></div>
+<div>
+  <iframe src="192.168.0.16/html/"></iframe>
+</div>
