--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<div>
-  <iframe src="http://192.168.0.16/html/"></iframe>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+
+
+<body>
+    <div>
+      <iframe src="http://192.168.0.16:8000/index.html" style="height: 480px; width: 640px;"></iframe>
+    </div>
+
+</body>
+</html>
